<resources>
    <string name="app_name">Lanchonete</string>
    <string name="menu">Cardápio</string>
    <string name="cart">Carrinho</string>
    <string name="offer">Promoções</string>
    <string name="add">Adicionar</string>
    <string name="finish">Finalizar</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_value">0</string>
    <string name="total">Total</string>
    <string name="discount">Desconto</string>
    <string name="total_to_pay">Total a pagar</string>
    <string name="additional">Adicionais: </string>
    <string name="your_way">%s - Do seu jeito</string>
    <string name="order_finished">Pedido finalizado</string>
    <string name="order_finished_message">Seu pedido chegará em 5 minutos.</string>
    <string name="empty_cart">Carrinho vazio</string>
    <string name="empty_cart_message">Adicione seu hamburguer favorito ao carrinho.</string>
    <string name="ok">OK</string>
</resources>
