<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/clickable_size">

    <TextView
        android:id="@+id/selector_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hambúrguer de carne" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="@dimen/clickable_size"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/large_padding"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/minus"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/selector_value" />

    <TextView
        android:id="@+id/selector_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_padding"
        android:text="@string/default_value"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/plus_button"
        app:layout_constraintEnd_toStartOf="@id/plus_button"
        app:layout_constraintTop_toTopOf="@id/plus_button" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="@dimen/clickable_size"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/large_padding"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/plus"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>